exports[`Tabs renders correctly 1`] = `
<div
  class="foLpMM">
  <div
    class="jLtDvn">
    <div>
      <button
        data-selected="true"
        value="Tab1">
        Tab1
      </button>
      <button
        value="Tab2">
        Tab2
      </button>
      <button
        value="Tab3">
        Tab3
      </button>
    </div>
    <div />
  </div>
  <div>
    <div
      style="display:flex;align-items:center;justify-content:center;width:100%;height:100%;font-size:22px;">
      Selected Tab1
    </div>
  </div>
</div>
`;

exports[`Tabs renders with props 1`] = `
<div
  class="foLpMM">
  <div
    class="jLtDvn">
    <div>
      <button
        value="Tab1">
        Tab1
      </button>
      <button
        data-selected="true"
        value="Tab2">
        Tab2
      </button>
      <button
        value="Tab3">
        Tab3
      </button>
    </div>
    <div>
      <button>
        Button 1
      </button>
      <button>
        Button 2
      </button>
    </div>
  </div>
  <div>
    <div
      style="display:flex;align-items:center;justify-content:center;width:100%;height:100%;font-size:22px;">
      Selected Tab2
    </div>
  </div>
</div>
`;
